# financial-analyst

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.specify/memory/: constitution.md
data/: .gitignore  mock.yaml  mock_eval_dataset.yaml
data/mock_eval_dataset/extracted_data/: material_changes_report.csv  material_changes_report.json
notebooks/: extract_mock_pdf.py
notebooks/create_mock_eval_dataset/: create_mock_eval_dataset.py  materiality_models.py
notebooks/create_mock_eval_dataset/prompts/: system_prompt.jinja2  user_prompt.jinja2
