[project]
name = "financial-analyst"
version = "0.0.1"
description = "Agent for analysing a company's financial performance"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "experiment",
    "pymupdf>=1.26.6",
    "shared",
]

[dependency-groups]
dev = ["pytest==8.3.*", "pytest-cov==6.1.*", "pyright==1.1.*", "ruff==0.11.*"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.ruff]
src = ["packages/**/src"]
line-length = 100
target-version = "py312"
show-fixes = true
lint.select = [
    "B0",     # bugbear
    "E",      # pycodestyle
    "F",      # Pyflakes
    "I",      # import order
    "UP",     # pyupgrade
    "RUF100", # valid noqa annnotations
]

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "--strict-markers --import-mode=importlib"

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
shared = { workspace = true }
experiment = { workspace = true }
